#3 [UPD] account_analytic_parent: - add parent_id to tree view

--- a/account_analytic_parent/views/account_analytic_account_view.xml
+++ b/account_analytic_parent/views/account_analytic_account_view.xml
@@ -13,4 +13,15 @@
         </field>
     </record>
 
+    <record id="view_account_analytic_account_list" model="ir.ui.view">
+    <field name="name">account.analytic.account.list</field>
+    <field name="model">account.analytic.account</field>
+    <field name="inherit_id" ref="analytic.view_account_analytic_account_list"/>
+    <field name="arch" type="xml">
+      <field name="code" position="after">
+        <field name="parent_id"/>
+      </field>
+    </field>
+  </record>
+  
 </odoo>
